<resources>
    <string name="app_name">TestNet</string>
    <string name="send">Send</string>
    <string name="signup">signup</string>
    <string name="logout">Logout</string>
    <string name="take_an_exam">Take an Exam</string>
    <string name="my_grades">My Grades</string>
    <string name="students_grades">Students\' Grades</string>
    <string name="create_an_exam">Create an Exam</string>
    <string name="enter_exam_id">Enter exam ID</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="plus">+</string>
</resources>
