<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9FF9F"
    tools:context=".TeacherMenuActivity">

    <Button
        android:id="@+id/createExamBtn"
        android:textStyle="bold"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:layout_marginTop="212dp"
        android:background="@android:color/white"
        android:onClick="createExamClicked"
        android:text="@string/create_an_exam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/watchStudGradesBtn"
        android:textStyle="bold"
        android:layout_width="135dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:onClick="watchGradesClicked"
        android:shadowColor="@color/colorAccent"
        android:text="@string/students_grades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createExamBtn" />

    <Button
        android:id="@+id/teacherMenuLogoutBtn"
        android:layout_width="84dp"
        android:layout_height="37dp"
        android:layout_marginBottom="44dp"
        android:background="@android:color/white"
        android:onClick="logoutClicked"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>